harbor/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harbor
spec:
  tls:
  - hosts: 
    - harbor.gdphdc.com
    secretName: harbor-ingress-secret 
  rules:
  - host: harbor.gdphdc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
      - path: /v2
        backend:
          serviceName: registry
          servicePort: repo
      - path: /service
        backend:
          serviceName: ui
          servicePort: 80
